# env_should_be

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  description.json  requirements.txt  setup.cfg  setup.py  tox.ini
.garbage/: README.md  something.bash
.github/workflows/: python-publish.yml  release.yml  test.yml
examples/0.2.3/flask_1/: Dockerfile  README.md  app.py  docker-compose.yml  notify_admin.bash  requirements.txt
examples/0.2.3/flask_1/descriptions/: app.json  db.yaml
src/: main.py  setup.py
src/env_should_be/: __init__.py  __main__.py  cli.py  description.py  exception.py  main.py  utils.py
tests/: test_class.py  test_function.py  test_main.py
