[metadata]
version = attr: env_should_be.__version__
license_files = LICENSE
name = env_should_be
author = Wassef911
author_email = wassef911@gmail.com
description = Ship Secure and Streamlined Multi-Environment Specification.
keywords = python3, pypi, package
long_description_content_type = text/markdown
url = https://github.com/wassef911/env_should_be
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyaml
python_requires = >=3.11.4

[options.extras_require]
dev =
    check-manifest
test =
    coverage

[options.entry_points]
console_scripts =
    env_should_be = env_should_be.cli:main
